--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Angela Carey DGMD E-12</title>
 </head>
 <body>
-    <h1>Testing</h1>
+    <h1>DGMD E-12 Introduction to Creative Exploration on the Web</h1>
 </body>
 </html>
