--- a/assignment_0/index.html
+++ b/assignment_0/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html lang="">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Hello, You!</title>
+    <link rel="stylesheet" href="sites.css" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>p5.js example</title>
-  <style>
-    body {
-      padding: 0;
-      margin: 0;
-    }
-  </style>
-  <script src="../p5.js"></script>
-  <!-- <script src="../addons/p5.sound.js"></script> -->
-  <script src="sketch.js"></script>
-</head>
-
-<body>
-  <main>
-  </main>
-</body>
-
+  <body>
+    <main>
+      <h1>Hello, You!</h1>
+      <div class= "video">
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/LOxQ-LnouZQ"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+      </div>
+    </main>
+  </body>
 </html>
