--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Angela Carey DGMD E-12</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>DGMD E-12 Introduction to Creative Exploration on the Web</h1>
+    <ul>
+        <li>
+            <a href="assignment_0/index.html">Assignment 0 </a>
+        </li>
+    </ul>
 </body>
 </html>
