Unordered list on home index.html

--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Angela Carey DGMD E-12</title>
+    <link rel="stylesheet" href="/styles/sites.css" />
   </head>
-  <body>
-    <h1>DGMD E-12 Introduction to Creative Exploration on the Web</h1>
-    <ul>
-        <li>
-            <a href="assignment_0/index.html">Assignment 0 </a>
-        </li>
-    </ul>
+    <body>
+      <main id = "home">
+        <h1>DGMD E-12 Introduction to Creative Exploration on the Web</h1>
+        <ul>
+            <li>
+                <a href="assignment_0/index.html">Assignment 0 </a>
+            </li>
+        </ul>
+      </main>
 </body>
 </html>
