--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
     <body>
       <main id = "home">
         <h1>DGMD E-12 Introduction to Creative Exploration on the Web</h1>
+        <h2>Informal</h2>
+        <ul>
+          <li>
+            <a href="informal/week01/index.html">Week 1</a>
+            <a href="informal/week02/index.html">Week 2</a>            
+          </li>
+        </ul>
+        <h2>Assignments</h2>
         <ul>
             <li>
-                <a href="assignment_0/index.html">Assignment 0 </a>
+                <a href="assignments/assignment_0/index.html">Assignment 0 </a>
             </li>
         </ul>
       </main>
