links on home page

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
         <h2>Informal</h2>
         <ul>
           <li>
-            <a href="informal/week01/index.html">Week 1</a>
+            <a href="informal/week01/index.html">Week 1 - Self portrait</a>
           </li>
           <li>
-            <a href="informal/week02/index.html">Week 2</a>            
+            <a href="informal/week02/index.html">Week 2 - Windmills</a>            
           </li>
         </ul>
         <h2>Assignments</h2>
 
         <ul>
             <li>
-                <a href="assignments/assignment_0/index.html">Assignment 0 </a>
+                <a href="assignments/assignment_0/index.html">Assignment 0 - Intro Video</a>
             </li>
         </ul>
       </main>
