--- a/assignments/assignment_0/index.html
+++ b/assignments/assignment_0/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello, You!</title>
-    <link rel="stylesheet" href="../styles/sites.css" />
+    <link rel="stylesheet" href="sites.css" />
   </head>
 
   <body>
