--- a/assignments/assignment_01/index.html
+++ b/assignments/assignment_01/index.html
@@ -3,13 +3,22 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>p5.js translate & rotate</title>
+    <title>Assignment 1: Bauhaus</title>
     <style> body {padding: 0; margin: 0;} </style>
     <script src="libraries/p5.js"></script>
     <script src="libraries/p5.sound.js"></script>
     <script src="sketch.js"></script>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Assignment 1</h1>
+    <h1>Assignment 1: Bauhaus</h1>
+    <h2> Bauhaus Inspiration Image</h2>
+    <img class="fit-picture"
+    src="images/462604489.jpeg"
+    alt="Gyorgy Kepes: Innocent Echo">
+    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
+    
+
   </body>
 </html>
