--- a/index.html
+++ b/index.html
@@ -18,13 +18,19 @@
           <li>
             <a href="informal/week02/index.html">Week 2 - Windmills</a>            
           </li>
+          <li>
+            <a href="informal/week03/index.html">Week 3 - Square Effect</a>            
+          </li>
         </ul>
         <h2>Assignments</h2>
 
         <ul>
-            <li>
-                <a href="assignments/assignment_0/index.html">Assignment 0 - Intro Video</a>
-            </li>
+          <li>
+            <a href="assignments/assignment_0/index.html">Assignment 0 - Intro Video</a>
+        </li>            
+        <li>
+          <a href="assignments/assignment_01/index.html">Assignment 1 - Bauhaus Inspired</a>
+      </li>
         </ul>
       </main>
 </body>
