--- a/assignments/assignment_01/index.html
+++ b/assignments/assignment_01/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Assignment 1: Bauhaus Inspired</title>
     <script src="libraries/p5.js"></script>
     <script src="libraries/p5.sound.js"></script>
@@ -10,100 +10,99 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>DGMD E-12 Creative Coding </h1>
+    <h1>DGMD E-12 Creative Coding</h1>
     <h2>Assignment 1: Bauhaus Inspired</h2>
-    <section id = "sketch-holder">
+    <section id="sketch-holder">
       <h3>Digital Echos</h3>
-      <h4>Click toggles transformation. TAB key clears transformation.</h4>
+      <p>Click anywhere on the image to toggle the transformation. Use the TAB key to reset the image.</p>
     </section>
     <section id="inspiration">
       <h3>Bauhaus Inspiration Image</h3>
       <p>
-        This painting got my attention right away because
-         of the beautiful colors and simple shapes.
+        This painting got my attention right away because of the beautiful
+        colors and simple shapes.
       </p>
       <figure>
         <img
-        src="images/462604489.jpeg"
-        alt="Artwork by Gyorgy Kepes Innocent Echo">
-        <figcaption>"Gyorgy Kepes: Innocent Echo"</figcaption>
-    </figure>
+          src="images/462604489.jpeg"
+          alt="Artwork by Gyorgy Kepes Innocent Echo"
+        />
+        <figcaption>Gyorgy Kepes: Innocent Echo</figcaption>
+      </figure>
     </section>
-    <section id = "process">
-    <h3>My Process</h3>
-      <p> 
-        I started by attempting to recreate the most basic forms 
-        in the painting. I chose to use the entire rectangle canvas 
-        instead of the original square shape. I also chose to use
-        my favorite shade of purple, which is close to the purple 
-        in the original painting, but not quite. 
-  
-        Once I had the base in place, I knew I wanted to add 
-        interactivity to change the base into something new 
-        entirely.
-  
-        I thought it would be fun to layer small shapes on top
-        of the base in the same color palette to mimic some of 
-        the imperfections in the original painting. I liked the 
-        idea of using primitive shapes in keeping with the Bauhaus
-        theme. I used transparency, as to not cover the base 
-        completely. I chose to make the purple less transparent than the other colors.
+    <section id="process">
+      <h3>My Process</h3>
+      <p>
+        I started by attempting to recreate the most basic forms in the
+        painting. I chose to use the entire rectangle canvas instead of the
+        original square shape. I also chose to use my favorite shade of purple,
+        which is close to the purple in the original painting, but not quite.
+        Once I had the base in place, I knew I wanted to add interactivity to
+        change the base into something new entirely. I thought it would be fun
+        to layer small shapes on top of the base in the same color palette to
+        mimic some of the imperfections in the original painting. I liked the
+        idea of using primitive shapes in keeping with the Bauhaus theme. I used
+        transparency, as to not cover the base completely. I chose to make the
+        purple less transparent than the other colors.
       </p>
       <p>
-        I ran into many issues while I was coding this up and went 
-        through several iterations. 
-        </p>
-        <ul>
-          <li>
-            Speed of transformation: First I tried using a timer and <code>millis()</code>
-            function to control the speed. Later I found that the for loop 
-            slowed it down enough.   
-          </li>
-          <li>
-            The <code>mouseClick()</code> Function: At first I couldn’t wrap my head around 
-            how to use it, so I opted for <code>mouseIsPressed()</code>instead. A boolean 
-            value in conjunction with an if statement was a useful way to 
-            control the transformation. This meant the user had to hold down 
-            the mouse while the transformation took place. In the end, I 
-            decided it was better to use <code>mouseClicked()</code> function. Click once 
-            to make it transform, and click again to make it stop. It felt 
-            better to give the user more control, and wasn’t hard to implement.
-          </li>
-          <li>
-            The <code>mouseClicked()</code> fires regardless of mouse position -- on or 
-            off the canvas. I was reading through the documentation and found
-            mousePressed used canvas dot notation, to identify if the mouse
-            was pressed while on the canvas. I used the same idea for mouseClicked
-            and it worked!
-          </li>
-          <li>
-            Keeping the base drawing: At first I had the base drawing in the 
-            draw function. When I tried to run my code, it was drawing over 
-            my shapes! I decided to put the code for the base drawing into 
-            the setup function, since I only wanted it to run once.
-          </li>
-          <li>Using <code>translate()</code> for shape origins: At first I was using multiple
-            translate functions for each shape. I was noticing strange patterns
-            in my artwork, and then I remembered what Alex said regarding 
-            multiple translates causing this very issue. I added in <code>push()</code>
-            and <code>pop()</code> to get that under control which seemed to work.
-          </li>
-          <li>
-            I wanted the colors and shape sizes to be random, so I created
-            variables that could be manipulated to accomplish the task. I 
-            opted to use an array for the colors, since there was a finite 
-            number of colors I wanted to use in this artwork.
-          </li>          
-          <li>
-            I wanted to have the ability to clear the transformation. I found 
-            the clear function and realized I would need to redraw the 
-            base drawing after clearing the canvas. I moved the <code>baseDraw ()</code>into 
-            it's own function so it could be easily called. I then added some
-            functionality to the <code>keyPressed()</code> function to clear the canvas and 
-            redraw the base drawing!
-          </li>  
-        </ul>
-      
-      </section>
- </body>
+        I ran into many issues while I was coding this up and went through
+        several iterations.
+      </p>
+      <ul>
+        <li>
+          Speed of transformation: First I tried using a timer and
+          <code>millis()</code>
+          function to control the speed. Later I found that the for loop slowed
+          it down enough.
+        </li>
+        <li>
+          The <code>mouseClick()</code> Function: At first I couldn’t wrap my
+          head around how to use it, so I opted for
+          <code>mouseIsPressed()</code>instead. A boolean value in conjunction
+          with an if statement was a useful way to control the transformation.
+          This meant the user had to hold down the mouse while the
+          transformation took place. In the end, I decided it was better to use
+          <code>mouseClicked()</code> function. Click once to make it transform,
+          and click again to make it stop. It felt better to give the user more
+          control, and wasn’t hard to implement.
+        </li>
+        <li>
+          The <code>mouseClicked()</code> fires regardless of mouse position --
+          on or off the canvas. I was reading through the documentation and
+          found mousePressed used canvas dot notation, to identify if the mouse
+          was pressed while on the canvas. I used the same idea for mouseClicked
+          and it worked!
+        </li>
+        <li>
+          Keeping the base drawing: At first I had the base drawing in the draw
+          function. When I tried to run my code, it was drawing over my shapes!
+          I decided to put the code for the base drawing into the setup
+          function, since I only wanted it to run once.
+        </li>
+        <li>
+          Using <code>translate()</code> for shape origins: At first I was using
+          multiple translate functions for each shape. I was noticing strange
+          patterns in my artwork, and then I remembered what Alex said regarding
+          multiple translates causing this very issue. I added in
+          <code>push()</code> and <code>pop()</code> to get that under control
+          which seemed to work.
+        </li>
+        <li>
+          I wanted the colors and shape sizes to be random, so I created
+          variables that could be manipulated to accomplish the task. I opted to
+          use an array for the colors, since there was a finite number of colors
+          I wanted to use in this artwork.
+        </li>
+        <li>
+          I wanted to have the ability to clear the transformation. I found the
+          clear function and realized I would need to redraw the base drawing
+          after clearing the canvas. I moved the <code>baseDraw()</code>into
+          it's own function so it could be easily called. I then added some
+          functionality to the <code>keyPressed()</code> function to clear the
+          canvas and redraw the base drawing!
+        </li>
+      </ul>
+    </section>
+  </body>
 </html>
