--- a/assignments/assignment_01/index.html
+++ b/assignments/assignment_01/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>DGMD E-12 Creative Coding</h1>
+    <h1>DGMD E-12 Introduction to Creative Exploration on the Web</h1>
     <h2>Assignment 1: Bauhaus Inspired</h2>
     <section id="sketch-holder">
       <h3>Digital Echos</h3>
@@ -59,7 +59,7 @@
         <li>
           The <code>mouseClick()</code> Function: At first I couldn’t wrap my
           head around how to use it, so I opted for
-          <code>mouseIsPressed()</code>instead. A boolean value in conjunction
+          <code>mouseIsPressed()</code> instead. A boolean value in conjunction
           with an if statement was a useful way to control the transformation.
           This meant the user had to hold down the mouse while the
           transformation took place. In the end, I decided it was better to use
@@ -70,8 +70,8 @@
         <li>
           The <code>mouseClicked()</code> fires regardless of mouse position --
           on or off the canvas. I was reading through the documentation and
-          found mousePressed used canvas dot notation, to identify if the mouse
-          was pressed while on the canvas. I used the same idea for mouseClicked
+          found <code>mousePressed()</code> used canvas dot notation, to identify if the mouse
+          was pressed while on the canvas. I used the same idea for <code>mouseClicked()</code>
           and it worked!
         </li>
         <li>
