--- a/assignments/assignment_01/index.html
+++ b/assignments/assignment_01/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <h1>DGMD E-12 Introduction to Creative Exploration on the Web</h1>
-    <h2>Assignment 1: Bauhaus Inspired</h2>
+    <h2>Assignment 1: Bauhaus Inspired | Angela Carey</h2>
     <section id="sketch-holder">
       <h3>Digital Echos</h3>
       <p>Click anywhere on the image to toggle the transformation. Use the TAB key to reset the image.</p>
