--- a/assignments/assignment_01/index.html
+++ b/assignments/assignment_01/index.html
@@ -57,7 +57,7 @@
           it down enough.
         </li>
         <li>
-          The <code>mouseClick()</code> Function: At first I couldn’t wrap my
+          The <code>mouseClicked()</code> Function: At first I couldn’t wrap my
           head around how to use it, so I opted for
           <code>mouseIsPressed()</code> instead. A boolean value in conjunction
           with an if statement was a useful way to control the transformation.
