--- a/assignments/assignment_01/index.html
+++ b/assignments/assignment_01/index.html
@@ -75,7 +75,7 @@
           and it worked!
         </li>
         <li>
-          Keeping the base drawing: At first I had the base drawing in the draw
+          Keeping the base drawing: At first I had the base drawing in the <code>draw()</code>
           function. When I tried to run my code, it was drawing over my shapes!
           I decided to put the code for the base drawing into the setup
           function, since I only wanted it to run once.
