--- a/assignments/assignment_01/index.html
+++ b/assignments/assignment_01/index.html
@@ -77,7 +77,7 @@
         <li>
           Keeping the base drawing: At first I had the base drawing in the <code>draw()</code>
           function. When I tried to run my code, it was drawing over my shapes!
-          I decided to put the code for the base drawing into the setup
+          I decided to put the code for the base drawing into the <code>setup()</code>
           function, since I only wanted it to run once.
         </li>
         <li>
