--- a/assignments/assignment_01/index.html
+++ b/assignments/assignment_01/index.html
@@ -14,7 +14,7 @@
     <h2>Assignment 1: Bauhaus Inspired | Angela Carey</h2>
     <section id="sketch-holder">
       <h3>Digital Echos</h3>
-      <p>Click anywhere on the image to toggle the transformation. Use the TAB key to reset the image.</p>
+      <p>Click anywhere on the image to toggle the transformation on/off. Use the TAB key to reset the image.</p>
     </section>
     <section id="inspiration">
       <h3>Bauhaus Inspiration Image</h3>
