update home page

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
           <li>
             <a href="informal/week03/index.html">Week 3 - Square Effect</a>            
           </li>
+          <li>
+            <a href="informal/week04/index.html">Week 4 - Nested Loops</a>            
+          </li>
         </ul>
         <h2>Assignments</h2>
 
