--- a/informal/week04/index.html
+++ b/informal/week04/index.html
@@ -10,6 +10,11 @@
 
   <body>
     <main>
+      <h1>DGMD E-12 Introduction to Creative Exploration on the Web</h1>
+      <h2>Infomral Week 4: Nested Loops | Angela Carey</h2>
+      <section id="sketch-holder">
+        <p>Click anywhere on the image to toggle the transformation on/off.</p>
+      </section>
       
     </main>
   </body>
