--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
           <li>
             <a href="informal/week04/index.html">Week 4 - Nested Loops</a>            
           </li>
+          <li>
+            <a href="informal/week05/index.html">Week 5 - Functions</a>            
+          </li>
         </ul>
         <h2>Assignments</h2>
 
