--- a/informal/week04/index.html
+++ b/informal/week04/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Week 4 Informal</title>
-    <script src="../../p5.js"></script>
+    <script src="../../libraries/p5.js"></script>
     <script src="sketch.js"></script>
   </head>
 
