--- a/informal/week06/index.html
+++ b/informal/week06/index.html
@@ -6,6 +6,7 @@
     <title>Week 5 Informal</title>
     <script src="../../libraries/p5.js"></script>
     <script src="sketch.js"></script>
+    <script src="myCircles.js"></script>
     <link rel="stylesheet" href="styles.css" />
   </head>
 
