--- a/informal/week06/index.html
+++ b/informal/week06/index.html
@@ -3,24 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Week 5 Informal</title>
+    <title>Week 6 Informal</title>
     <script src="../../libraries/p5.js"></script>
+    <script src="Box.js"></script>
     <script src="sketch.js"></script>
-    <script src="myCircles.js"></script>
     <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
     <main>
       <h1>DGMD E-12 Introduction to Creative Exploration on the Web</h1>
-      <h2>Informal Week 5: Functions | Angela Carey</h2>
-      <h3>Magic Canvas</h3>
-      <ul>
-        <li>Click to reveal hidden response.</li>
-        <li>Click again to stop background.</li>
-        <li>Press ESC key clear and reset.</li>
-        <li>x-value determines circle size (for slow or fast reveal).</li>
-      </ul>
+      <h2>Informal Week 6: Constructors & Arrays | Angela Carey</h2>
+
       <section id="sketch-holder"></section>
     </main>
   </body>
