--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
           <li>
             <a href="informal/week05/index.html">Week 5 - Functions</a>            
           </li>
+          <li>
+            <a href="informal/week06/index.html">Week 6 - Constructors & Arrays</a>            
+          </li>
         </ul>
         <h2>Assignments</h2>
 
