Changed from ESC to Click

--- a/informal/week06/index.html
+++ b/informal/week06/index.html
@@ -14,7 +14,7 @@
     <main>
       <h1>DGMD E-12 Introduction to Creative Exploration on the Web</h1>
       <h2>Informal Week 6: Constructors & Arrays | Angela Carey</h2>
-
+      <h3>Click on canvas to begin</h3>
       <section id="sketch-holder"></section>
     </main>
   </body>
