--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
           <li>
             <a href="informal/week06/index.html">Week 6 - Constructors & Arrays</a>            
           </li>
+          <li>
+            <a href="informal/week07/index.html">Week 7 - Arrays</a>            
+          </li>
         </ul>
         <h2>Assignments</h2>
 
