--- a/index.html
+++ b/index.html
@@ -13,35 +13,35 @@
         <h2>Informal</h2>
         <ul>
           <li>
-            <a href="informal/week01/index.html">Week 1 - Self portrait</a>
+            <a href="informal/week01/index.html" target="_blank" rel="noopener noreferrer">Week 1 - Self portrait</a>
           </li>
           <li>
-            <a href="informal/week02/index.html">Week 2 - Windmills</a>            
+            <a href="informal/week02/index.html" target="_blank" rel="noopener noreferrer">Week 2 - Windmills</a>            
           </li>
           <li>
-            <a href="informal/week03/index.html">Week 3 - Square Effect</a>            
+            <a href="informal/week03/index.html" target="_blank" rel="noopener noreferrer">Week 3 - Square Effect</a>            
           </li>
           <li>
-            <a href="informal/week04/index.html">Week 4 - Nested Loops</a>            
+            <a href="informal/week04/index.html" target="_blank" rel="noopener noreferrer">Week 4 - Nested Loops</a>            
           </li>
           <li>
-            <a href="informal/week05/index.html">Week 5 - Functions</a>            
+            <a href="informal/week05/index.html" target="_blank" rel="noopener noreferrer">Week 5 - Functions</a>            
           </li>
           <li>
-            <a href="informal/week06/index.html">Week 6 - Constructors & Arrays</a>            
+            <a href="informal/week06/index.html" target="_blank" rel="noopener noreferrer">Week 6 - Constructors & Arrays</a>            
           </li>
           <li>
-            <a href="informal/week07/index.html">Week 7 - Arrays</a>            
+            <a href="informal/week07/index.html" target="_blank" rel="noopener noreferrer">Week 7 - Arrays</a>            
           </li>
         </ul>
         <h2>Assignments</h2>
 
         <ul>
           <li>
-            <a href="assignments/assignment_0/index.html">Assignment 0 - Intro Video</a>
+            <a href="assignments/assignment_0/index.html" target="_blank" rel="noopener noreferrer">Assignment 0 - Intro Video</a>
         </li>            
         <li>
-          <a href="assignments/assignment_01/index.html">Assignment 1 - Bauhaus Inspired</a>
+          <a href="assignments/assignment_01/index.html" target="_blank" rel="noopener noreferrer">Assignment 1 - Bauhaus Inspired</a>
       </li>
         </ul>
       </main>
