--- a/informal/week07/index.html
+++ b/informal/week07/index.html
@@ -12,9 +12,9 @@
 
   <body>
     <main>
-      <h1>DGMD E-12 Introduction to Creative Exploration on the Web</h1>
+      <!-- <h1>DGMD E-12 Introduction to Creative Exploration on the Web</h1>
       <h2>Informal Week 7: Arrays | Angela Carey</h2>
-      <section id="sketch-holder"></section>
+      <section id="sketch-holder"></section> -->
     </main>
   </body>
 </html>
