added testing comment

--- a/informal/week07/index.html
+++ b/informal/week07/index.html
@@ -15,6 +15,8 @@
       <!-- <h1>DGMD E-12 Introduction to Creative Exploration on the Web</h1>
       <h2>Informal Week 7: Arrays | Angela Carey</h2>
       <section id="sketch-holder"></section> -->
+    <!-- this comment is testing Netlify refresh -->
+    
     </main>
   </body>
 </html>
