Updated home pages

--- a/assignments/assignment_02/index.html
+++ b/assignments/assignment_02/index.html
@@ -12,6 +12,24 @@
   <body>
     <h1>DGMD E-12 Introduction to Creative Exploration on the Web</h1>
     <h2>Assignment 2: It's About Time | Angela Carey</h2>
-    
+    <h3>3 Parts</h3>
+    <ul>
+      <li>
+        <a
+          href="part_a/index.html"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Part A - Tick Tock</a
+        >
+      </li>
+      <li>
+        <a
+          href="part_b/index.html"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Part B - Abstract Clock</a
+        >
+      </li>
+    </ul>
   </body>
 </html>
