--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
         <li>
           <a href="assignments/assignment_01/index.html" target="_blank" rel="noopener noreferrer">Assignment 1 - Bauhaus Inspired</a>
       </li>
-        </ul>
+      <li>
+        <a href="assignments/assignment_02/index.html" target="_blank" rel="noopener noreferrer">Assignment 2 - It's About Time</a>
+    </li>
+      </ul>
       </main>
 </body>
 </html>
