--- a/assignments/assignment_02/part_b/index.html
+++ b/assignments/assignment_02/part_b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>It's About Time: Part A</title>
+    <title>It's About Time: Part B</title>
     <script src="libraries/p5.js"></script>
     <script src="sketch.js"></script>
   </head>
