--- a/assignments/assignment_02/index.html
+++ b/assignments/assignment_02/index.html
@@ -7,12 +7,11 @@
     <script src="libraries/p5.js"></script>
     <script src="libraries/p5.sound.js"></script>
     <script src="sketch.js"></script>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../../styles/sites.css" />
   </head>
   <body>
     <h1>DGMD E-12 Introduction to Creative Exploration on the Web</h1>
     <h2>Assignment 2: It's About Time | Angela Carey</h2>
-    <h3>3 Parts</h3>
     <ul>
       <li>
         <a
