--- a/assignments/assignment_02/index.html
+++ b/assignments/assignment_02/index.html
@@ -29,6 +29,15 @@
           >Part B - Abstract Clock</a
         >
       </li>
+      <li>
+        <a
+          href="part_c/index.html"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Part C - Tally Ho</a
+        >
+      </li>
+
     </ul>
   </body>
 </html>
