--- a/assignments/assignment_02/part_c/index.html
+++ b/assignments/assignment_02/part_c/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>It's About Time: Part C</title>
     <script src="libraries/p5.js"></script>
     <script src="sketch.js"></script>
   </head>
   <body>
-    <section id="sketch-holder">
-      
-    </section>
+    <h2>Assignment 2 | Part C | Tally Ho!</h2>
+    <h3>Click Escape To Clear</h3>
+    <section id="sketch-holder"></section>
   </body>
 </html>
