--- a/assignments/assignment_02/index.html
+++ b/assignments/assignment_02/index.html
@@ -7,7 +7,7 @@
     <script src="libraries/p5.js"></script>
     <script src="libraries/p5.sound.js"></script>
     <script src="sketch.js"></script>
-    <link rel="stylesheet" href="../../styles/sites.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <h1>DGMD E-12 Introduction to Creative Exploration on the Web</h1>
