--- a/assignments/assignment_02/part_c/index.html
+++ b/assignments/assignment_02/part_c/index.html
@@ -6,8 +6,9 @@
     <title>It's About Time: Part C</title>
     <script src="libraries/p5.js"></script>
     <script src="sketch.js"></script>
+    <link rel="stylesheet" href="../styles.css" />
   </head>
-  <body>
+  <body class="noSelect">
     <h2>Assignment 2 | Part C | Tally Ho!</h2>
     <h3>Click Escape To Clear</h3>
     <section id="sketch-holder"></section>
