update css and html pages

--- a/assignments/assignment_02/part_b/index.html
+++ b/assignments/assignment_02/part_b/index.html
@@ -6,10 +6,11 @@
     <title>It's About Time: Part B</title>
     <script src="libraries/p5.js"></script>
     <script src="sketch.js"></script>
+    <link rel="stylesheet" href="../styles.css" />
+
   </head>
-  <body>
-    <section id="sketch-holder">
-      
-    </section>
+  <body class="noSelect">
+    <h2>Assignment 2 | Part B | Abstract Clock</h2>
+    <section id="sketch-holder"></section>
   </body>
 </html>
