--- a/assignments/assignment_02/part_c/index.html
+++ b/assignments/assignment_02/part_c/index.html
@@ -10,7 +10,7 @@
   </head>
   <body class="noSelect">
     <h2>Assignment 2 | Part C | Tally Ho!</h2>
-    <h3>Click Escape To Clear</h3>
+    <h3>Click on Canvas to Tally | Esc to clear</h3>
     <section id="sketch-holder"></section>
   </body>
 </html>
