--- a/assignments/assignment_02/part_a/index.html
+++ b/assignments/assignment_02/part_a/index.html
@@ -6,10 +6,10 @@
     <title>It's About Time: Part A</title>
     <script src="libraries/p5.js"></script>
     <script src="sketch.js"></script>
+    <link rel="stylesheet" href="../styles.css" />
   </head>
-  <body>
-    <section id="sketch-holder">
-      
-    </section>
+  <body class="noSelect">
+    <h2>Assignment 2 | Part A | Tick Tock</h2>
+    <section id="sketch-holder"></section>
   </body>
 </html>
