update css and html pages

--- a/assignments/assignment_02/part_a/index.html
+++ b/assignments/assignment_02/part_a/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>It's About Time: Part A</title>
     <script src="libraries/p5.js"></script>
     <script src="sketch.js"></script>
     <link rel="stylesheet" href="../styles.css" />
   </head>
   <body class="noSelect">
-    <h1>Assignment 2 | Part A | Tick Tock</h1>
-    <section id="sketch-holder"></section>
+    <header>
+      <h1>Assignment 2 | Part A | Tick Tock</h1>
+    </header>
+    <main>
+      <section id="sketch-holder"></section>
+    </main>
   </body>
 </html>
