--- a/assignments/assignment_02/index.html
+++ b/assignments/assignment_02/index.html
@@ -10,34 +10,28 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>DGMD E-12 Introduction to Creative Exploration on the Web</h1>
-    <h2>Assignment 2: It's About Time | Angela Carey</h2>
-    <ul>
-      <li>
-        <a
-          href="part_a/index.html"
-          target="_blank"
-          rel="noopener noreferrer"
-          >Part A - Tick Tock</a
-        >
-      </li>
-      <li>
-        <a
-          href="part_b/index.html"
-          target="_blank"
-          rel="noopener noreferrer"
-          >Part B - Abstract Clock</a
-        >
-      </li>
-      <li>
-        <a
-          href="part_c/index.html"
-          target="_blank"
-          rel="noopener noreferrer"
-          >Part C - Tally Ho</a
-        >
-      </li>
-
-    </ul>
+    <header>
+      <h1>DGMD E-12 Introduction to Creative Exploration on the Web</h1>
+    </header>
+    <main>
+      <h2>Assignment 2: It's About Time | Angela Carey</h2>
+      <ul>
+        <li>
+          <a href="part_a/index.html" target="_blank" rel="noopener noreferrer"
+            >Part A - Tick Tock</a
+          >
+        </li>
+        <li>
+          <a href="part_b/index.html" target="_blank" rel="noopener noreferrer"
+            >Part B - Abstract Clock</a
+          >
+        </li>
+        <li>
+          <a href="part_c/index.html" target="_blank" rel="noopener noreferrer"
+            >Part C - Tally Ho</a
+          >
+        </li>
+      </ul>
+    </main>
   </body>
 </html>
