--- a/assignments/assignment_02/part_c/index.html
+++ b/assignments/assignment_02/part_c/index.html
@@ -9,8 +9,12 @@
     <link rel="stylesheet" href="../styles.css" />
   </head>
   <body class="noSelect">
-    <h1>Assignment 2 | Part C | Tally Ho!</h1>
-    <h2>Click on Canvas to Tally | Esc to clear</h2>
-    <section id="sketch-holder"></section>
+    <header>
+      <h1>Assignment 2 | Part C | Tally Ho!</h1>
+    </header>
+    <main>
+      <h2>Click on Canvas to Tally | Esc to clear</h2>
+      <section id="sketch-holder"></section>
+    </main>
   </body>
 </html>
