update css and html pages

--- a/assignments/assignment_02/part_c/index.html
+++ b/assignments/assignment_02/part_c/index.html
@@ -13,8 +13,9 @@
       <h1>Assignment 2 | Part C | Tally Ho!</h1>
     </header>
     <main>
-      <h2>Click on Canvas to Tally | Esc to clear</h2>
-      <section id="sketch-holder"></section>
+      <section id="sketch-holder">
+        <p>Click on Canvas to Tally | Esc to clear</p>
+      </section>
     </main>
   </body>
 </html>
