update css and html pages

--- a/assignments/assignment_02/part_a/index.html
+++ b/assignments/assignment_02/part_a/index.html
@@ -13,7 +13,9 @@
       <h1>Assignment 2 | Part A | Tick Tock</h1>
     </header>
     <main>
-      <section id="sketch-holder"></section>
+      <section id="sketch-holder">
+        <p> Analog clock with digital clock inset</p>
+      </section>
     </main>
   </body>
 </html>
