--- a/assignments/assignment_02/part_b/index.html
+++ b/assignments/assignment_02/part_b/index.html
@@ -13,7 +13,9 @@
       <h1>Assignment 2 | Part B | Abstract Clock</h1>
     </header>
     <main>
-      <section id="sketch-holder"></section>
+      <section id="sketch-holder">
+        <p>Shapes move and change with time</p>
+      </section>
     </main>
   </body>
 </html>
