--- a/assignments/assignment_02/part_a/index.html
+++ b/assignments/assignment_02/part_a/index.html
@@ -14,7 +14,7 @@
     </header>
     <main>
       <section id="sketch-holder">
-        <p> Analog clock with digital clock inset</p>
+        <h2> Analog clock with digital clock inset</h2>
       </section>
     </main>
   </body>
