update css and html pages

--- a/assignments/assignment_02/part_b/index.html
+++ b/assignments/assignment_02/part_b/index.html
@@ -14,7 +14,7 @@
     </header>
     <main>
       <section id="sketch-holder">
-        <p>Shapes move and change with time</p>
+        <h2>Shapes move and change with time</h2>
       </section>
     </main>
   </body>
