--- a/assignments/assignment_02/part_c/index.html
+++ b/assignments/assignment_02/part_c/index.html
@@ -14,7 +14,7 @@
     </header>
     <main>
       <section id="sketch-holder">
-        <p>Click on Canvas to Tally | Esc to clear</p>
+        <h2>Click on Canvas to Tally | Esc to clear</h2>
       </section>
     </main>
   </body>
