--- a/informal/week08/index.html
+++ b/informal/week08/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>p5.js example</title>
-    <style>
-      body {
-        padding: 0;
-        margin: 0;
-      }
-    </style>
+    <title>Informal Weeks 8 & 9</title>
     <script src="../../libraries/p5.js"></script>
-    <!-- <script src="../addons/p5.sound.js"></script> -->
+    <script src="../addons/p5.sound.js"></script>
     <script src="sketch.js"></script>
   </head>
 
   <body>
     <main>
+      <section id="sketch-holder">
+      </section>    
+      <section id="radio">
+        <p> Choose your favorite snack:</p>  
+
+      </section>
+      
+
     </main>
   </body>
 </html>
