updated main page

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
           <li>
             <a href="informal/week07/index.html" target="_blank" rel="noopener noreferrer">Week 7 - Arrays</a>            
           </li>
+          <li>
+            <a href="informal/week08/index.html" target="_blank" rel="noopener noreferrer">Week 8 & 9 - Dom</a>            
+          </li>
         </ul>
         <h2>Assignments</h2>
 
