--- a/assignments/assignment_03/index.html
+++ b/assignments/assignment_03/index.html
@@ -10,11 +10,8 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header>
-      <h1>DGMD E-12 Introduction to Creative Exploration on the Web</h1>
-    </header>
-    <main>
-      <h2>Assignment 3: DOM, DOM, DOM | Angela Carey</h2>
-    </main>
+    <h1>DGMD E-12 Introduction to Creative Exploration on the Web</h1>
+    <h2>Assignment 3: DOM, DOM, DOM | Angela Carey</h2>
+    <section id="sketch-holder"></section>
   </body>
 </html>
