--- a/assignments/assignment_03/index.html
+++ b/assignments/assignment_03/index.html
@@ -10,8 +10,10 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>DGMD E-12 Introduction to Creative Exploration on the Web</h1>
+    <!-- <h1>DGMD E-12 Introduction to Creative Exploration on the Web</h1>
     <h2>Assignment 3: DOM, DOM, DOM | Angela Carey</h2>
-    <section id="sketch-holder"></section>
+    <section id="sketch-holder"></section> -->
+    <section id = "input"></section>
+    <h1 id = "output"></h1>
   </body>
 </html>
