update main page

--- a/index.html
+++ b/index.html
@@ -7,49 +7,112 @@
     <title>Angela Carey DGMD E-12</title>
     <link rel="stylesheet" href="/styles/sites.css" />
   </head>
-    <body>
-      <main id = "home">
-        <h1>DGMD E-12 Introduction to Creative Exploration on the Web</h1>
-        <h2>Informal</h2>
-        <ul>
-          <li>
-            <a href="informal/week01/index.html" target="_blank" rel="noopener noreferrer">Week 1 - Self portrait</a>
-          </li>
-          <li>
-            <a href="informal/week02/index.html" target="_blank" rel="noopener noreferrer">Week 2 - Windmills</a>            
-          </li>
-          <li>
-            <a href="informal/week03/index.html" target="_blank" rel="noopener noreferrer">Week 3 - Square Effect</a>            
-          </li>
-          <li>
-            <a href="informal/week04/index.html" target="_blank" rel="noopener noreferrer">Week 4 - Nested Loops</a>            
-          </li>
-          <li>
-            <a href="informal/week05/index.html" target="_blank" rel="noopener noreferrer">Week 5 - Functions</a>            
-          </li>
-          <li>
-            <a href="informal/week06/index.html" target="_blank" rel="noopener noreferrer">Week 6 - Constructors & Arrays</a>            
-          </li>
-          <li>
-            <a href="informal/week07/index.html" target="_blank" rel="noopener noreferrer">Week 7 - Arrays</a>            
-          </li>
-          <li>
-            <a href="informal/week08/index.html" target="_blank" rel="noopener noreferrer">Week 8 & 9 - Dom</a>            
-          </li>
-        </ul>
-        <h2>Assignments</h2>
-
-        <ul>
-          <li>
-            <a href="assignments/assignment_0/index.html" target="_blank" rel="noopener noreferrer">Assignment 0 - Intro Video</a>
-        </li>            
+  <body>
+    <main id="home">
+      <h1>DGMD E-12 Introduction to Creative Exploration on the Web</h1>
+      <h2>Informal</h2>
+      <ul>
         <li>
-          <a href="assignments/assignment_01/index.html" target="_blank" rel="noopener noreferrer">Assignment 1 - Bauhaus Inspired</a>
-      </li>
-      <li>
-        <a href="assignments/assignment_02/index.html" target="_blank" rel="noopener noreferrer">Assignment 2 - It's About Time</a>
-    </li>
+          <a
+            href="informal/week01/index.html"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Week 1 - Self portrait</a
+          >
+        </li>
+        <li>
+          <a
+            href="informal/week02/index.html"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Week 2 - Windmills</a
+          >
+        </li>
+        <li>
+          <a
+            href="informal/week03/index.html"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Week 3 - Square Effect</a
+          >
+        </li>
+        <li>
+          <a
+            href="informal/week04/index.html"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Week 4 - Nested Loops</a
+          >
+        </li>
+        <li>
+          <a
+            href="informal/week05/index.html"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Week 5 - Functions</a
+          >
+        </li>
+        <li>
+          <a
+            href="informal/week06/index.html"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Week 6 - Constructors & Arrays</a
+          >
+        </li>
+        <li>
+          <a
+            href="informal/week07/index.html"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Week 7 - Arrays</a
+          >
+        </li>
+        <li>
+          <a
+            href="informal/week08/index.html"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Week 8 & 9 - Dom</a
+          >
+        </li>
       </ul>
-      </main>
-</body>
+      <h2>Assignments</h2>
+
+      <ul>
+        <li>
+          <a
+            href="assignments/assignment_0/index.html"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Assignment 0 - Intro Video</a
+          >
+        </li>
+        <li>
+          <a
+            href="assignments/assignment_01/index.html"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Assignment 1 - Bauhaus Inspired</a
+          >
+        </li>
+        <li>
+          <a
+            href="assignments/assignment_02/index.html"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Assignment 2 - It's About Time</a
+          >
+        </li>
+        <li>
+          <a
+            href="assignments/assignment_03/index.html"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Assignment 3 - DOM, DOM, DOM</a
+          >
+        </li>
+      </ul>
+    </main>
+  </body>
 </html>
