update input locations

--- a/assignments/assignment_03/index.html
+++ b/assignments/assignment_03/index.html
@@ -13,7 +13,10 @@
     <!-- <h1>DGMD E-12 Introduction to Creative Exploration on the Web</h1>
     <h2>Assignment 3: DOM, DOM, DOM | Angela Carey</h2>
     <section id="sketch-holder"></section> -->
-    <section id = "input"></section>
+    <section id = "input">
+      <p id = 'name'> Enter Name:</p>
+      <p id = 'color'> Choose Color:</p>
+    </section>
     <h1 id = "output"></h1>
   </body>
 </html>
