update input locations

--- a/assignments/assignment_03/index.html
+++ b/assignments/assignment_03/index.html
@@ -14,8 +14,8 @@
     <h2>Assignment 3: DOM, DOM, DOM | Angela Carey</h2>
     <section id="sketch-holder"></section> -->
     <section id = "input">
-      <p id = 'name'> Enter Name:</p>
-      <p id = 'color'> Choose Color:</p>
+      <p id = "name"> Enter Name:</p>
+      <p id = "color"> Choose Color:</p>
     </section>
     <h1 id = "output"></h1>
   </body>
