--- a/informal/week10/index.html
+++ b/informal/week10/index.html
@@ -6,12 +6,11 @@
   <title>Informal Week 10</title>
   <script src="libraries/p5.js"></script>
   <script src="libraries/p5.sound.js"></script>
-  <script src="sketch.js"></script>
+  <script src="sketch.js"></script>  
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <!-- <p>Enter Character Name: <input type="text" id="character" value="Bob"></p>
-  <p>Enter Episode #: <input type="text" id="season" value="1"></p> -->
-  <!-- <button id="submit">Submit</button>
-  <br> -->
+<h1>Bored?</h1>
+<p>Choose activity type below and go enjoy your day!</p>
 </body>
 </html>
