add informal week 10 to home page

--- a/index.html
+++ b/index.html
@@ -75,19 +75,27 @@
             rel="noopener noreferrer"
             >Week 8 & 9 - Dom</a
           >
+        </li>        
+        <li>
+          <a
+            href="informal/week10/index.html"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Week 10 - API</a
+          >
         </li>
       </ul>
       <h2>Assignments</h2>
 
       <ul>
-        <li>
+        <!-- <li>
           <a
             href="assignments/assignment_0/index.html"
             target="_blank"
             rel="noopener noreferrer"
             >Assignment 0 - Intro Video</a
           >
-        </li>
+        </li> -->
         <li>
           <a
             href="assignments/assignment_01/index.html"
