update home page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <main id="home">
       <h1>DGMD E-12 Introduction to Creative Exploration on the Web</h1>
-      <h2>Informal</h2>
+      <h2>Informal Exercises</h2>
       <ul>
         <li>
           <a
