--- a/assignments/assignment_04/index.html
+++ b/assignments/assignment_04/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-<html lang="">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Informal Week 10</title>
-  <script src="libraries/p5.js"></script>
-  <script src="libraries/p5.sound.js"></script>
-  <script src="sketch.js"></script>  
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-<h1>Bored?</h1>
-<p>Choose activity type below and go enjoy your day!</p>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Assignment 4: Final</title>
+    <script src="libraries/p5.js"></script>
+    <script src="libraries/p5.sound.js"></script>
+    <script src="sketch.js"></script>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <section id = "input">
+      <p id = "name"> Enter Name:</p>
+      <p id = "color"> Choose Color:</p>
+    </section>
+    <h1 id = "output"></h1>
+  </body>
 </html>
