--- a/assignments/assignment_04/index.html
+++ b/assignments/assignment_04/index.html
@@ -12,7 +12,7 @@
   <body>
     <section id = "input">
       <p id = "name"> Enter Name:</p>
-      <p id = "color"> Choose Color:</p>
+      <p id = "theme"> Choose Theme:</p>
     </section>
     <h1 id = "output"></h1>
   </body>
