--- a/assignments/assignment_04/index.html
+++ b/assignments/assignment_04/index.html
@@ -14,6 +14,9 @@
       <p id = "name"> Enter Name:</p>
       <p id = "theme"> Choose Theme:</p>
     </section>
+    <section id = "sketch-holder">
+
+    </section>
     <h1 id = "output"></h1>
   </body>
 </html>
