--- a/assignments/assignment_04/index.html
+++ b/assignments/assignment_04/index.html
@@ -6,7 +6,8 @@
     <title>Assignment 4: Final</title>
     <script src="libraries/p5.js"></script>
     <script src="libraries/p5.sound.js"></script>
-    <script src="sketch.js"></script>
+    <script src="sketch.js"></script>    
+    <!-- <script src="data/themes.json"></script> -->
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
