--- a/assignments/assignment_04/index.html
+++ b/assignments/assignment_04/index.html
@@ -12,12 +12,12 @@
   </head>
   <body>
     <section id = "input">
-      <p id = "name"> Enter Name:</p>
-      <p id = "theme"> Choose Theme:</p>
+      <p id = "name"> </p>
+      <p id = "theme"></p>
     </section>
     <section id = "sketch-holder">
-
+      <p id = "output"></p>
     </section>
-    <h1 id = "output"></h1>
+
   </body>
 </html>
