add assn 4 to home page

--- a/index.html
+++ b/index.html
@@ -119,6 +119,14 @@
             rel="noopener noreferrer"
             >Assignment 3 - DOM, DOM, DOM</a
           >
+        </li>        
+        <li>
+          <a
+            href="assignments/assignment_04/index.html"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Assignment 4 - Final Project</a
+          >
         </li>
       </ul>
     </main>
