--- a/assignments/assignment_04/index.html
+++ b/assignments/assignment_04/index.html
@@ -10,11 +10,13 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <section id="input">
-      <p id="name"></p>
-      <p id="theme"></p>
-    </section>
+    <h1>DGMD E-12 Introduction to Creative Exploration on the Web</h1>
+    <h2>Assignment 4: Final Project | Angela Carey</h2>
+    <h3> Make yourself a Birthday Card</h3>
+    <p> Enter Name and choose your theme. Then click on the Create button to enjoy!</p>
+    <section id="input"></section>
     <section id="sketch-holder">
+      <!-- <div id="icon"></div> -->
     </section>
   </body>
 </html>
