--- a/assignments/assignment_04/index.html
+++ b/assignments/assignment_04/index.html
@@ -13,7 +13,7 @@
     <h1>DGMD E-12 Introduction to Creative Exploration on the Web</h1>
     <h2>Assignment 4: Final Project | Angela Carey</h2>
     <h3> Make yourself a Birthday Card</h3>
-    <p> Enter Name and choose your theme. Then click on the Create button to enjoy!</p>
+    <p> Enter name and choose your theme. Then click on the Create button to enjoy!</p>
     <section id="input"></section>
     <section id="sketch-holder">
       <!-- <div id="icon"></div> -->
